--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,12 @@
     <string name="skips_label">Skips: </string>
     <string name="complete_label">Complete</string>
     <string name="skip_label">Skip</string>
+
+    <!--  SHARED PREFERENCES KEYS  -->
+    <string name="challenge_key">com.firstventuresgroup.dailychallenges.challenge</string>
+    <string name="current_date">current_date</string>
+    <string name="challenge_title">challenge_title</string>
+    <string name="challenge_category">challenge_category</string>
+    <string name="challenge_summary">challenge_summary</string>
+    <string name="challenge_desc">challenge_desc</string>
 </resources>
