--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="skip_label">Skip</string>
 
     <!--  SHARED PREFERENCES KEYS  -->
-    <string name="challenge_key">com.firstventuresgroup.dailychallenges.challenge</string>
+    <string name="challenge_key">com.okomilabs.dailychallenges.challenge</string>
     <string name="curr_date">date</string>
     <string name="curr_title">title</string>
     <string name="curr_category">category</string>
