Fixed bugs caused by merge

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="skips_label">Skips: </string>
     <string name="complete_label">Complete</string>
     <string name="skip_label">Skip</string>
+    <string name="overview_label">Challenge Overview</string>
   
     <!--  SHARED PREFERENCES KEYS  -->
     <string name="challenge_key">com.okomilabs.dailychallenges.challenge</string>
