Removed hardcoded strings and optimised code

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,8 @@
     <string name="complete_label">Complete</string>
     <string name="skip_label">Skip</string>
     <string name="overview_label">Challenge Overview</string>
+    <string name="links_label">Useful Links</string>
+    <string name="icon_desc">Category Icon</string>
   
     <!--  SHARED PREFERENCES KEYS  -->
     <string name="challenge_key">com.okomilabs.dailychallenges.challenge</string>
