--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="overview_label">Challenge Overview</string>
     <string name="links_label">Useful Links</string>
     <string name="icon_desc">Category Icon</string>
+    <string name="action_settings">Settings</string>
   
     <!--  SHARED PREFERENCES KEYS  -->
     <string name="challenge_key">com.okomilabs.dailychallenges.challenge</string>
