--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,8 +11,13 @@
     <!--  SHARED PREFERENCES KEYS  -->
     <string name="challenge_key">com.okomilabs.dailychallenges.challenge</string>
     <string name="curr_date">date</string>
+    <string name="curr_id">id</string>
     <string name="curr_title">title</string>
     <string name="curr_category">category</string>
     <string name="curr_summary">summary</string>
     <string name="curr_desc">desc</string>
+
+    <string name="skips_key">com.okomilabs.dailychallenges.skips</string>
+    <string name="skipped_challenges">skipped</string>
+    <string name="skips_remaining">skips</string>
 </resources>
