--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,9 +5,11 @@
     <string name="complete_label">Complete</string>
     <string name="skip_label">Skip</string>
     <string name="overview_label">Challenge Overview</string>
+    <string name="read_more_label">Read More</string>
     <string name="links_label">Useful Links</string>
     <string name="action_settings">Settings</string>
-    <string name="icon_desc">Category Icon</string>
+    <string name="category_icon_desc">Category Icon</string>
+    <string name="arrow_icon_desc">Arrow Icon</string>
     
     <!--  SHARED PREFERENCES KEYS  -->
     <string name="challenge_key">com.okomilabs.dailychallenges.challenge</string>
