--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,12 @@
     <string name="curr_desc">desc</string>
 
     <string name="skips_key">com.okomilabs.dailychallenges.skips</string>
-    <string name="skipped_challenges">skipped</string>
+    <string name="skipped_challenge">skipped</string>
     <string name="skips_remaining">skips</string>
+
+    <string name="admob_id">ca-app-pub-6520975918360419~6174148309</string>
+    <string name="banner_ad">ca-app-pub-6520975918360419/4861066639</string>
+    <string name="reward_ad">ca-app-pub-6520975918360419/1352942751</string>
+    <string name="test_banner_ad">ca-app-pub-3940256099942544/6300978111</string>
+    <string name="test_reward_ad">ca-app-pub-3940256099942544/5224354917</string>
 </resources>
