--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
-    <string name="app_name">DailyChallenges</string>
+    <string name="app_name">Venture - Daily Challenges</string>
+
+    <!--  Text View Labels  -->
     <string name="streak_label">Streaks: </string>
     <string name="skips_label">Skips: </string>
     <string name="complete_label">Complete</string>
@@ -10,7 +12,13 @@
     <string name="action_settings">Settings</string>
     <string name="category_icon_desc">Category Icon</string>
     <string name="arrow_icon_desc">Arrow Icon</string>
-    
+
+    <!--  Drawer Layout Labels  -->
+    <string name="home_label">Home</string>
+    <string name="help_label">Help</string>
+    <string name="about_label">About</string>
+    <string name="credits_label">Credits</string>
+
     <!--  SHARED PREFERENCES KEYS  -->
     <string name="challenge_key">com.okomilabs.dailychallenges.challenge</string>
     <string name="curr_date">date</string>
