--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">Venture - Daily Challenges</string>
 
     <!--  Text View Labels  -->
+    <string name="welcome_message">Welcome, your\nchallenge today is…</string>
     <string name="streak_label">Streaks: </string>
     <string name="skips_label">Skips: </string>
     <string name="complete_label">Complete</string>
