--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,8 @@
     <string name="read_more_label">Read More</string>
     <string name="links_label">Useful Links</string>
     <string name="action_settings">Settings</string>
+
+    <string name="streak_icon_desc">Streak Icon</string>
     <string name="freeze_icon_desc">Freeze Icon</string>
     <string name="category_icon_desc">Category Icon</string>
     <string name="arrow_icon_desc">Arrow Icon</string>
