--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,10 +40,29 @@
     <string name="links_label">Useful Links</string>
     <string name="action_settings">Settings</string>
 
+    <string name="tutorial_text_1">
+        You get a new randomly generated challenge everyday. Tap the challenge card for interesting
+        trivia and useful links.
+    </string>
+    <string name="tutorial_text_2">
+        If, for any reason, you are unable to complete a challenge, such as weather, you skip the
+        challenge up to 2 times a day.
+    </string>
+    <string name="tutorial_text_3">
+        Tap the complete button to set today\'s challenge as complete. Keep completing challenges to
+        build up a streak.
+    </string>
+    <string name="tutorial_text_4">
+        For every 7 challenges you complete in a row, you earn a freeze. The freeze can be used to
+        preserve your streak on any day which you would like a break from challenges. Remember you
+        have a limited number so use them wisely.
+    </string>
+
     <string name="streak_icon_desc">Streak Icon</string>
     <string name="freeze_icon_desc">Freeze Icon</string>
     <string name="category_icon_desc">Category Icon</string>
     <string name="arrow_icon_desc">Arrow Icon</string>
+    <string name="tutorial_desc">Tutorial</string>
 
     <!--  Drawer Layout Labels  -->
     <string name="home_label">Home</string>
