--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,13 +38,21 @@
     <string name="overview_label">Challenge Overview</string>
     <string name="read_more_label">Read More</string>
     <string name="links_label">Useful Links</string>
-    <string name="action_settings">Settings</string>
+    <string name="last_completed_label">Last Completed: </string>
+    <string name="total_completed_label">Total Completed: </string>
 
     <!--  Button Labels  -->
     <string name="complete_label">Complete</string>
     <string name="skip_label">Skip</string>
     <string name="next_label">Next</string>
     <string name="finish_label">Finish</string>
+
+    <!--  Drawer Layout Labels  -->
+    <string name="home_label">Home</string>
+    <string name="list_label">Challenge List</string>
+    <string name="help_label">Help</string>
+    <string name="about_label">About</string>
+    <string name="credits_label">Credits</string>
 
     <string name="tutorial_text_1">
         You get a new randomly generated challenge everyday. Tap the challenge card for interesting
@@ -68,14 +76,6 @@
     <string name="category_icon_desc">Category Icon</string>
     <string name="arrow_icon_desc">Arrow Icon</string>
     <string name="tutorial_desc">Tutorial</string>
-
-    <!--  Drawer Layout Labels  -->
-    <string name="home_label">Home</string>
-    <string name="list_label">Challenge List</string>
-    <string name="help_label">Help</string>
-    <string name="about_label">About</string>
-    <string name="credits_label">Credits</string>
-
 
     <!--  SHARED PREFERENCES KEYS  -->
     <string name="challenge_key">com.okomilabs.dailychallenges.challenge</string>
