--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,8 +8,8 @@
     <string name="complete_label">Complete</string>
     <string name="skip_label">Skip</string>
     <string name="overview_label">Challenge Overview</string>
-    <string name="read_more_label">Read More</string>
-    <string name="links_label">Useful Links</string>
+    <string name="read_more_label">Read More…</string>
+    <string name="links_label">Useful Links:</string>
     <string name="action_settings">Settings</string>
 
     <string name="streak_icon_desc">Streak Icon</string>
