--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,7 +55,7 @@
     <string name="ned_role">UI Designer, Content Writer</string>
     <string name="saif_role">Business Director, Content Writer</string>
     <string name="ross_role">Content Manager, Administrator</string>
-    <string name="kenny_role">For supporting us</string>
+    <string name="kenny_role">For helping us coordinate our startup</string>
     <string name="rijal_role">For designing our logo</string>
 
     <string name="sang_link">https://www.linkedin.com/in/sang-nguyen-a42712a7/</string>
