Reworded page 2 tutorial text

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -121,7 +121,7 @@
         trivia and useful links.
     </string>
     <string name="tutorial_text_2">
-        If, for any reason such as weather, you are unable to complete a challenge, you can skip the
+        If, for any reason, you are unable to complete a challenge, you can skip the
         challenge up to 2 times a day.
     </string>
     <string name="tutorial_text_3">
