Added Ross' device id

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -176,6 +176,7 @@
     <string name="sang_oppo">1805DBC7E2E5F4F767CC5BBD50879F8B</string>
     <string name="ned_motorola">724ACB32D31860CB411FA8FAEFF1ABF0</string>
     <string name="saif_pixel">2E7D1F0D183432DE37EC93B817A53EFC</string>
+    <string name="ross_huawei">8B6B70DA26722EF2013A4859BE7D3265</string>
 
 
     <!--  AdMob IDs  -->
