Changed Sang's role name

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,7 +51,7 @@
     <string name="kenny_name">Kenny Ekwonna</string>
     <string name="rijal_name">Rijal Widyatmoko</string>
 
-    <string name="sang_role">Project Leader, Lead Programmer</string>
+    <string name="sang_role">Project Leader, Programmer</string>
     <string name="ned_role">UI Designer, Content Writer</string>
     <string name="saif_role">Business Director, Content Writer</string>
     <string name="ross_role">Content Manager, Administrator</string>
