--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -189,4 +189,13 @@
     <string name="test_banner_ad">ca-app-pub-3940256099942544/6300978111</string>
     <string name="test_reward_ad">ca-app-pub-3940256099942544/5224354917</string>
 
+    <!-- Notifications -->
+    <string name="channel_id">notification_channel</string>
+    <string name="channel_name">reminder</string>
+    <string name="channel_description">daily_notification</string>
+    <string name="reminder_content">Complete_your_daily_challenge_for_the_day!</string>
+    <string name="notification_on">Turned_on_daily_notifications</string>
+    <string name="notification_off">Notifications_removed</string>
+    <string name="notifications_key">com.okomilabs.dailychallenges.notifications</string>
+
 </resources>
